tests/NormalTests/paczka1/fuzzy1/42849821.err
Error in line 1: sVMX S688 67,9
Error in line 16: gagmZ5Q8Oua A958 90,6
Error in line 18: A653 A944 16,2
